ex_sources = files('main.cpp')

example = executable(example_name, ex_sources,
                  include_directories: framework_include,
                  link_with: framework_lib)

configure_file(input: 'bmp/pal1.bmp',          output: 'pal1.bmp', copy: true)
configure_file(input: 'bmp/pal1bg.bmp',        output: 'pal1bg.bmp', copy: true)
configure_file(input: 'bmp/pal1wb.bmp',        output: 'pal1wb.bmp', copy: true)
configure_file(input: 'bmp/pal4.bmp',          output: 'pal4.bmp', copy: true)
configure_file(input: 'bmp/pal4gs.bmp',        output: 'pal4gs.bmp', copy: true)
configure_file(input: 'bmp/pal4rle.bmp',       output: 'pal4rle.bmp', copy: true)
configure_file(input: 'bmp/pal8-0.bmp',        output: 'pal8-0.bmp', copy: true)
configure_file(input: 'bmp/pal8.bmp',          output: 'pal8.bmp', copy: true)
configure_file(input: 'bmp/pal8gs.bmp',        output: 'pal8gs.bmp', copy: true)
configure_file(input: 'bmp/pal8nonsquare.bmp', output: 'pal8nonsquare.bmp', copy: true)
configure_file(input: 'bmp/pal8os2.bmp',       output: 'pal8os2.bmp', copy: true)
configure_file(input: 'bmp/pal8rle.bmp',       output: 'pal8rle.bmp', copy: true)
configure_file(input: 'bmp/pal8topdown.bmp',   output: 'pal8topdown.bmp', copy: true)
configure_file(input: 'bmp/pal8v4.bmp',        output: 'pal8v4.bmp', copy: true)
configure_file(input: 'bmp/pal8v5.bmp',        output: 'pal8v5.bmp', copy: true)
configure_file(input: 'bmp/pal8w124.bmp',      output: 'pal8w124.bmp', copy: true)
configure_file(input: 'bmp/pal8w125.bmp',      output: 'pal8w125.bmp', copy: true)
configure_file(input: 'bmp/pal8w126.bmp',      output: 'pal8w126.bmp', copy: true)
configure_file(input: 'bmp/rgb16-565.bmp',     output: 'rgb16-565.bmp', copy: true)
configure_file(input: 'bmp/rgb16-565pal.bmp',  output: 'rgb16-565pal.bmp', copy: true)
configure_file(input: 'bmp/rgb16.bmp',         output: 'rgb16.bmp', copy: true)
configure_file(input: 'bmp/rgb16bfdef.bmp',    output: 'rgb16bfdef.bmp', copy: true)
configure_file(input: 'bmp/rgb24.bmp',         output: 'rgb24.bmp', copy: true)
configure_file(input: 'bmp/rgb24pal.bmp',      output: 'rgb24pal.bmp', copy: true)
configure_file(input: 'bmp/rgb32.bmp',         output: 'rgb32.bmp', copy: true)
configure_file(input: 'bmp/rgb32bf.bmp',       output: 'rgb32bf.bmp', copy: true)
configure_file(input: 'bmp/rgb32bfdef.bmp',    output: 'rgb32bfdef.bmp', copy: true)
