ex_sources = files('main.cpp')

example = executable(example_name, ex_sources,
                  include_directories: framework_include,
                  link_with: framework_lib)

configure_file(input: 'bmp/good/pal1.bmp',          output: 'good_pal1.bmp', copy: true)
configure_file(input: 'bmp/good/pal1bg.bmp',        output: 'good_pal1bg.bmp', copy: true)
configure_file(input: 'bmp/good/pal1wb.bmp',        output: 'good_pal1wb.bmp', copy: true)
configure_file(input: 'bmp/good/pal4.bmp',          output: 'good_pal4.bmp', copy: true)
configure_file(input: 'bmp/good/pal4gs.bmp',        output: 'good_pal4gs.bmp', copy: true)
configure_file(input: 'bmp/good/pal4rle.bmp',       output: 'good_pal4rle.bmp', copy: true)
configure_file(input: 'bmp/good/pal8-0.bmp',        output: 'good_pal8-0.bmp', copy: true)
configure_file(input: 'bmp/good/pal8.bmp',          output: 'good_pal8.bmp', copy: true)
configure_file(input: 'bmp/good/pal8gs.bmp',        output: 'good_pal8gs.bmp', copy: true)
configure_file(input: 'bmp/good/pal8nonsquare.bmp', output: 'good_pal8nonsquare.bmp', copy: true)
configure_file(input: 'bmp/good/pal8os2.bmp',       output: 'good_pal8os2.bmp', copy: true)
configure_file(input: 'bmp/good/pal8rle.bmp',       output: 'good_pal8rle.bmp', copy: true)
configure_file(input: 'bmp/good/pal8topdown.bmp',   output: 'good_pal8topdown.bmp', copy: true)
configure_file(input: 'bmp/good/pal8v4.bmp',        output: 'good_pal8v4.bmp', copy: true)
configure_file(input: 'bmp/good/pal8v5.bmp',        output: 'good_pal8v5.bmp', copy: true)
configure_file(input: 'bmp/good/pal8w124.bmp',      output: 'good_pal8w124.bmp', copy: true)
configure_file(input: 'bmp/good/pal8w125.bmp',      output: 'good_pal8w125.bmp', copy: true)
configure_file(input: 'bmp/good/pal8w126.bmp',      output: 'good_pal8w126.bmp', copy: true)
configure_file(input: 'bmp/good/rgb16-565.bmp',     output: 'good_rgb16-565.bmp', copy: true)
configure_file(input: 'bmp/good/rgb16-565pal.bmp',  output: 'good_rgb16-565pal.bmp', copy: true)
configure_file(input: 'bmp/good/rgb16.bmp',         output: 'good_rgb16.bmp', copy: true)
configure_file(input: 'bmp/good/rgb16bfdef.bmp',    output: 'good_rgb16bfdef.bmp', copy: true)
configure_file(input: 'bmp/good/rgb24.bmp',         output: 'good_rgb24.bmp', copy: true)
configure_file(input: 'bmp/good/rgb24pal.bmp',      output: 'good_rgb24pal.bmp', copy: true)
configure_file(input: 'bmp/good/rgb32.bmp',         output: 'good_rgb32.bmp', copy: true)
configure_file(input: 'bmp/good/rgb32bf.bmp',       output: 'good_rgb32bf.bmp', copy: true)
configure_file(input: 'bmp/good/rgb32bfdef.bmp',    output: 'good_rgb32bfdef.bmp', copy: true)

configure_file(input: 'bmp/bad/badbitcount.bmp',    output: 'bad_badbitcount.bmp', copy: true)
configure_file(input: 'bmp/bad/badbitssize.bmp',    output: 'bad_badbitssize.bmp', copy: true)
configure_file(input: 'bmp/bad/baddens1.bmp',       output: 'bad_baddens1.bmp', copy: true)
configure_file(input: 'bmp/bad/baddens2.bmp',       output: 'bad_baddens2.bmp', copy: true)
configure_file(input: 'bmp/bad/badfilesize.bmp',    output: 'bad_badfilesize.bmp', copy: true)
configure_file(input: 'bmp/bad/badheadersize.bmp',  output: 'bad_badheadersize.bmp', copy: true)
configure_file(input: 'bmp/bad/badpalettesize.bmp', output: 'bad_badpalettesize.bmp', copy: true)
configure_file(input: 'bmp/bad/badplanes.bmp',      output: 'bad_badplanes.bmp', copy: true)
configure_file(input: 'bmp/bad/badrle.bmp',         output: 'bad_badrle.bmp', copy: true)
configure_file(input: 'bmp/bad/badrle4.bmp',        output: 'bad_badrle4.bmp', copy: true)
configure_file(input: 'bmp/bad/badrle4bis.bmp',     output: 'bad_badrle4bis.bmp', copy: true)
configure_file(input: 'bmp/bad/badrle4ter.bmp',     output: 'bad_badrle4ter.bmp', copy: true)
configure_file(input: 'bmp/bad/badrlebis.bmp',      output: 'bad_badrlebis.bmp', copy: true)
configure_file(input: 'bmp/bad/badrleter.bmp',      output: 'bad_badrleter.bmp', copy: true)
configure_file(input: 'bmp/bad/badwidth.bmp',       output: 'bad_badwidth.bmp', copy: true)
configure_file(input: 'bmp/bad/pal8badindex.bmp',   output: 'bad_pal8badindex.bmp', copy: true)
configure_file(input: 'bmp/bad/reallybig.bmp',      output: 'bad_reallybig.bmp', copy: true)
configure_file(input: 'bmp/bad/rgb16-880.bmp',      output: 'bad_rgb16-880.bmp', copy: true)
configure_file(input: 'bmp/bad/rletopdown.bmp',     output: 'bad_rletopdown.bmp', copy: true)
configure_file(input: 'bmp/bad/shortfile.bmp',      output: 'bad_shortfile.bmp', copy: true)

configure_file(input: 'bmp/questionable/pal1huff.bmp',        output: 'questionable_pal1huff.bmp', copy: true)
configure_file(input: 'bmp/questionable/pal1p1.bmp',          output: 'questionable_pal1p1.bmp', copy: true)
configure_file(input: 'bmp/questionable/pal2.bmp',            output: 'questionable_pal2.bmp', copy: true)
configure_file(input: 'bmp/questionable/pal2color.bmp',       output: 'questionable_pal2color.bmp', copy: true)
configure_file(input: 'bmp/questionable/pal4rlecut.bmp',      output: 'questionable_pal4rlecut.bmp', copy: true)
configure_file(input: 'bmp/questionable/pal4rletrns.bmp',     output: 'questionable_pal4rletrns.bmp', copy: true)
configure_file(input: 'bmp/questionable/pal8offs.bmp',        output: 'questionable_pal8offs.bmp', copy: true)
configure_file(input: 'bmp/questionable/pal8os2-hs.bmp',      output: 'questionable_pal8os2-hs.bmp', copy: true)
configure_file(input: 'bmp/questionable/pal8os2-sz.bmp',      output: 'questionable_pal8os2-sz.bmp', copy: true)
configure_file(input: 'bmp/questionable/pal8os2sp.bmp',       output: 'questionable_pal8os2sp.bmp', copy: true)
configure_file(input: 'bmp/questionable/pal8os2v2-16.bmp',    output: 'questionable_pal8os2v2-16.bmp', copy: true)
configure_file(input: 'bmp/questionable/pal8os2v2-40sz.bmp',  output: 'questionable_pal8os2v2-40sz.bmp', copy: true)
configure_file(input: 'bmp/questionable/pal8os2v2-sz.bmp',    output: 'questionable_pal8os2v2-sz.bmp', copy: true)
configure_file(input: 'bmp/questionable/pal8os2v2.bmp',       output: 'questionable_pal8os2v2.bmp', copy: true)
configure_file(input: 'bmp/questionable/pal8oversizepal.bmp', output: 'questionable_pal8oversizepal.bmp', copy: true)
configure_file(input: 'bmp/questionable/pal8rlecut.bmp',      output: 'questionable_pal8rlecut.bmp', copy: true)
configure_file(input: 'bmp/questionable/pal8rletrns.bmp',     output: 'questionable_pal8rletrns.bmp', copy: true)
configure_file(input: 'bmp/questionable/rgb16-231.bmp',       output: 'questionable_rgb16-231.bmp', copy: true)
configure_file(input: 'bmp/questionable/rgb16-3103.bmp',      output: 'questionable_rgb16-3103.bmp', copy: true)
configure_file(input: 'bmp/questionable/rgb16faketrns.bmp',   output: 'questionable_rgb16faketrns.bmp', copy: true)
configure_file(input: 'bmp/questionable/rgb24jpeg.bmp',       output: 'questionable_rgb24jpeg.bmp', copy: true)
configure_file(input: 'bmp/questionable/rgb24largepal.bmp',   output: 'questionable_rgb24largepal.bmp', copy: true)
configure_file(input: 'bmp/questionable/rgb24lprof.bmp',      output: 'questionable_rgb24lprof.bmp', copy: true)
configure_file(input: 'bmp/questionable/rgb24png.bmp',        output: 'questionable_rgb24png.bmp', copy: true)
configure_file(input: 'bmp/questionable/rgb24prof.bmp',       output: 'questionable_rgb24prof.bmp', copy: true)
configure_file(input: 'bmp/questionable/rgb24prof2.bmp',      output: 'questionable_rgb24prof2.bmp', copy: true)
configure_file(input: 'bmp/questionable/rgb32-111110.bmp',    output: 'questionable_rgb32-111110.bmp', copy: true)
configure_file(input: 'bmp/questionable/rgb32-7187.bmp',      output: 'questionable_rgb32-7187.bmp', copy: true)
configure_file(input: 'bmp/questionable/rgb32-xbgr.bmp',      output: 'questionable_rgb32-xbgr.bmp', copy: true)
configure_file(input: 'bmp/questionable/rgb32fakealpha.bmp',  output: 'questionable_rgb32fakealpha.bmp', copy: true)
configure_file(input: 'bmp/questionable/rgb32h52.bmp',        output: 'questionable_rgb32h52.bmp', copy: true)
configure_file(input: 'bmp/questionable/rgba16-1924.bmp',     output: 'questionable_rgba16-1924.bmp', copy: true)
configure_file(input: 'bmp/questionable/rgba16-4444.bmp',     output: 'questionable_rgba16-4444.bmp', copy: true)
configure_file(input: 'bmp/questionable/rgba16-5551.bmp',     output: 'questionable_rgba16-5551.bmp', copy: true)
configure_file(input: 'bmp/questionable/rgba32-1010102.bmp',  output: 'questionable_rgba32-1010102.bmp', copy: true)
configure_file(input: 'bmp/questionable/rgba32-61754.bmp',    output: 'questionable_rgba32-61754.bmp', copy: true)
configure_file(input: 'bmp/questionable/rgba32-81284.bmp',    output: 'questionable_rgba32-81284.bmp', copy: true)
configure_file(input: 'bmp/questionable/rgba32.bmp',          output: 'questionable_rgba32.bmp', copy: true)
configure_file(input: 'bmp/questionable/rgba32abf.bmp',       output: 'questionable_rgba32abf.bmp', copy: true)
configure_file(input: 'bmp/questionable/rgba32h56.bmp',       output: 'questionable_rgba32h56.bmp', copy: true)
