ex_sources = files('main.cpp')

example = executable(example_name, ex_sources,
                  include_directories: framework_include,
                  link_with: framework_lib)

configure_file(input: 'bmp/good/pal1.bmp',          output: 'good_pal1.bmp', copy: true)
configure_file(input: 'bmp/good/pal1bg.bmp',        output: 'good_pal1bg.bmp', copy: true)
configure_file(input: 'bmp/good/pal1wb.bmp',        output: 'good_pal1wb.bmp', copy: true)
configure_file(input: 'bmp/good/pal4.bmp',          output: 'good_pal4.bmp', copy: true)
configure_file(input: 'bmp/good/pal4gs.bmp',        output: 'good_pal4gs.bmp', copy: true)
configure_file(input: 'bmp/good/pal4rle.bmp',       output: 'good_pal4rle.bmp', copy: true)
configure_file(input: 'bmp/good/pal8-0.bmp',        output: 'good_pal8-0.bmp', copy: true)
configure_file(input: 'bmp/good/pal8.bmp',          output: 'good_pal8.bmp', copy: true)
configure_file(input: 'bmp/good/pal8gs.bmp',        output: 'good_pal8gs.bmp', copy: true)
configure_file(input: 'bmp/good/pal8nonsquare.bmp', output: 'good_pal8nonsquare.bmp', copy: true)
configure_file(input: 'bmp/good/pal8os2.bmp',       output: 'good_pal8os2.bmp', copy: true)
configure_file(input: 'bmp/good/pal8rle.bmp',       output: 'good_pal8rle.bmp', copy: true)
configure_file(input: 'bmp/good/pal8topdown.bmp',   output: 'good_pal8topdown.bmp', copy: true)
configure_file(input: 'bmp/good/pal8v4.bmp',        output: 'good_pal8v4.bmp', copy: true)
configure_file(input: 'bmp/good/pal8v5.bmp',        output: 'good_pal8v5.bmp', copy: true)
configure_file(input: 'bmp/good/pal8w124.bmp',      output: 'good_pal8w124.bmp', copy: true)
configure_file(input: 'bmp/good/pal8w125.bmp',      output: 'good_pal8w125.bmp', copy: true)
configure_file(input: 'bmp/good/pal8w126.bmp',      output: 'good_pal8w126.bmp', copy: true)
configure_file(input: 'bmp/good/rgb16-565.bmp',     output: 'good_rgb16-565.bmp', copy: true)
configure_file(input: 'bmp/good/rgb16-565pal.bmp',  output: 'good_rgb16-565pal.bmp', copy: true)
configure_file(input: 'bmp/good/rgb16.bmp',         output: 'good_rgb16.bmp', copy: true)
configure_file(input: 'bmp/good/rgb16bfdef.bmp',    output: 'good_rgb16bfdef.bmp', copy: true)
configure_file(input: 'bmp/good/rgb24.bmp',         output: 'good_rgb24.bmp', copy: true)
configure_file(input: 'bmp/good/rgb24pal.bmp',      output: 'good_rgb24pal.bmp', copy: true)
configure_file(input: 'bmp/good/rgb32.bmp',         output: 'good_rgb32.bmp', copy: true)
configure_file(input: 'bmp/good/rgb32bf.bmp',       output: 'good_rgb32bf.bmp', copy: true)
configure_file(input: 'bmp/good/rgb32bfdef.bmp',    output: 'good_rgb32bfdef.bmp', copy: true)

configure_file(input: 'bmp/bad/badbitcount.bmp',    output: 'bad_badbitcount.bmp', copy: true)
configure_file(input: 'bmp/bad/badbitssize.bmp',    output: 'bad_badbitssize.bmp', copy: true)
configure_file(input: 'bmp/bad/baddens1.bmp',       output: 'bad_baddens1.bmp', copy: true)
configure_file(input: 'bmp/bad/baddens2.bmp',       output: 'bad_baddens2.bmp', copy: true)
configure_file(input: 'bmp/bad/badfilesize.bmp',    output: 'bad_badfilesize.bmp', copy: true)
configure_file(input: 'bmp/bad/badheadersize.bmp',  output: 'bad_badheadersize.bmp', copy: true)
configure_file(input: 'bmp/bad/badpalettesize.bmp', output: 'bad_badpalettesize.bmp', copy: true)
configure_file(input: 'bmp/bad/badplanes.bmp',      output: 'bad_badplanes.bmp', copy: true)
configure_file(input: 'bmp/bad/badrle.bmp',         output: 'bad_badrle.bmp', copy: true)
configure_file(input: 'bmp/bad/badrle4.bmp',        output: 'bad_badrle4.bmp', copy: true)
configure_file(input: 'bmp/bad/badrle4bis.bmp',     output: 'bad_badrle4bis.bmp', copy: true)
configure_file(input: 'bmp/bad/badrle4ter.bmp',     output: 'bad_badrle4ter.bmp', copy: true)
configure_file(input: 'bmp/bad/badrlebis.bmp',      output: 'bad_badrlebis.bmp', copy: true)
configure_file(input: 'bmp/bad/badrleter.bmp',      output: 'bad_badrleter.bmp', copy: true)
configure_file(input: 'bmp/bad/badwidth.bmp',       output: 'bad_badwidth.bmp', copy: true)
configure_file(input: 'bmp/bad/pal8badindex.bmp',   output: 'bad_pal8badindex.bmp', copy: true)
configure_file(input: 'bmp/bad/reallybig.bmp',      output: 'bad_reallybig.bmp', copy: true)
configure_file(input: 'bmp/bad/rgb16-880.bmp',      output: 'bad_rgb16-880.bmp', copy: true)
configure_file(input: 'bmp/bad/rletopdown.bmp',     output: 'bad_rletopdown.bmp', copy: true)
configure_file(input: 'bmp/bad/shortfile.bmp',      output: 'bad_shortfile.bmp', copy: true)

configure_file(input: 'bmp/questionable/pal1huff.bmp',        output: 'questionable_pal1huff.bmp', copy: true)
configure_file(input: 'bmp/questionable/pal1p1.bmp',          output: 'questionable_pal1p1.bmp', copy: true)
configure_file(input: 'bmp/questionable/pal2.bmp',            output: 'questionable_pal2.bmp', copy: true)
configure_file(input: 'bmp/questionable/pal2color.bmp',       output: 'questionable_pal2color.bmp', copy: true)
configure_file(input: 'bmp/questionable/pal4rlecut.bmp',      output: 'questionable_pal4rlecut.bmp', copy: true)
configure_file(input: 'bmp/questionable/pal4rletrns.bmp',     output: 'questionable_pal4rletrns.bmp', copy: true)
configure_file(input: 'bmp/questionable/pal8offs.bmp',        output: 'questionable_pal8offs.bmp', copy: true)
configure_file(input: 'bmp/questionable/pal8os2-hs.bmp',      output: 'questionable_pal8os2-hs.bmp', copy: true)
configure_file(input: 'bmp/questionable/pal8os2-sz.bmp',      output: 'questionable_pal8os2-sz.bmp', copy: true)
configure_file(input: 'bmp/questionable/pal8os2sp.bmp',       output: 'questionable_pal8os2sp.bmp', copy: true)
configure_file(input: 'bmp/questionable/pal8os2v2-16.bmp',    output: 'questionable_pal8os2v2-16.bmp', copy: true)
configure_file(input: 'bmp/questionable/pal8os2v2-40sz.bmp',  output: 'questionable_pal8os2v2-40sz.bmp', copy: true)
configure_file(input: 'bmp/questionable/pal8os2v2-sz.bmp',    output: 'questionable_pal8os2v2-sz.bmp', copy: true)
configure_file(input: 'bmp/questionable/pal8os2v2.bmp',       output: 'questionable_pal8os2v2.bmp', copy: true)
configure_file(input: 'bmp/questionable/pal8oversizepal.bmp', output: 'questionable_pal8oversizepal.bmp', copy: true)
configure_file(input: 'bmp/questionable/pal8rlecut.bmp',      output: 'questionable_pal8rlecut.bmp', copy: true)
configure_file(input: 'bmp/questionable/pal8rletrns.bmp',     output: 'questionable_pal8rletrns.bmp', copy: true)
configure_file(input: 'bmp/questionable/rgb16-231.bmp',       output: 'questionable_rgb16-231.bmp', copy: true)
configure_file(input: 'bmp/questionable/rgb16-3103.bmp',      output: 'questionable_rgb16-3103.bmp', copy: true)
configure_file(input: 'bmp/questionable/rgb16faketrns.bmp',   output: 'questionable_rgb16faketrns.bmp', copy: true)
configure_file(input: 'bmp/questionable/rgb24jpeg.bmp',       output: 'questionable_rgb24jpeg.bmp', copy: true)
configure_file(input: 'bmp/questionable/rgb24largepal.bmp',   output: 'questionable_rgb24largepal.bmp', copy: true)
configure_file(input: 'bmp/questionable/rgb24lprof.bmp',      output: 'questionable_rgb24lprof.bmp', copy: true)
configure_file(input: 'bmp/questionable/rgb24png.bmp',        output: 'questionable_rgb24png.bmp', copy: true)
configure_file(input: 'bmp/questionable/rgb24prof.bmp',       output: 'questionable_rgb24prof.bmp', copy: true)
configure_file(input: 'bmp/questionable/rgb24prof2.bmp',      output: 'questionable_rgb24prof2.bmp', copy: true)
configure_file(input: 'bmp/questionable/rgb32-111110.bmp',    output: 'questionable_rgb32-111110.bmp', copy: true)
configure_file(input: 'bmp/questionable/rgb32-7187.bmp',      output: 'questionable_rgb32-7187.bmp', copy: true)
configure_file(input: 'bmp/questionable/rgb32-xbgr.bmp',      output: 'questionable_rgb32-xbgr.bmp', copy: true)
configure_file(input: 'bmp/questionable/rgb32fakealpha.bmp',  output: 'questionable_rgb32fakealpha.bmp', copy: true)
configure_file(input: 'bmp/questionable/rgb32h52.bmp',        output: 'questionable_rgb32h52.bmp', copy: true)
configure_file(input: 'bmp/questionable/rgba16-1924.bmp',     output: 'questionable_rgba16-1924.bmp', copy: true)
configure_file(input: 'bmp/questionable/rgba16-4444.bmp',     output: 'questionable_rgba16-4444.bmp', copy: true)
configure_file(input: 'bmp/questionable/rgba16-5551.bmp',     output: 'questionable_rgba16-5551.bmp', copy: true)
configure_file(input: 'bmp/questionable/rgba32-1010102.bmp',  output: 'questionable_rgba32-1010102.bmp', copy: true)
configure_file(input: 'bmp/questionable/rgba32-61754.bmp',    output: 'questionable_rgba32-61754.bmp', copy: true)
configure_file(input: 'bmp/questionable/rgba32-81284.bmp',    output: 'questionable_rgba32-81284.bmp', copy: true)
configure_file(input: 'bmp/questionable/rgba32.bmp',          output: 'questionable_rgba32.bmp', copy: true)
configure_file(input: 'bmp/questionable/rgba32abf.bmp',       output: 'questionable_rgba32abf.bmp', copy: true)
configure_file(input: 'bmp/questionable/rgba32h56.bmp',       output: 'questionable_rgba32h56.bmp', copy: true)

configure_file(input: 'png/basi0g01.png', output: 'png_basi0g01.png', copy: true)
configure_file(input: 'png/basi0g02.png', output: 'png_basi0g02.png', copy: true)
configure_file(input: 'png/basi0g04.png', output: 'png_basi0g04.png', copy: true)
configure_file(input: 'png/basi0g08.png', output: 'png_basi0g08.png', copy: true)
configure_file(input: 'png/basi0g16.png', output: 'png_basi0g16.png', copy: true)
configure_file(input: 'png/basi2c08.png', output: 'png_basi2c08.png', copy: true)
configure_file(input: 'png/basi2c16.png', output: 'png_basi2c16.png', copy: true)
configure_file(input: 'png/basi3p01.png', output: 'png_basi3p01.png', copy: true)
configure_file(input: 'png/basi3p02.png', output: 'png_basi3p02.png', copy: true)
configure_file(input: 'png/basi3p04.png', output: 'png_basi3p04.png', copy: true)
configure_file(input: 'png/basi3p08.png', output: 'png_basi3p08.png', copy: true)
configure_file(input: 'png/basi4a08.png', output: 'png_basi4a08.png', copy: true)
configure_file(input: 'png/basi4a16.png', output: 'png_basi4a16.png', copy: true)
configure_file(input: 'png/basi6a08.png', output: 'png_basi6a08.png', copy: true)
configure_file(input: 'png/basi6a16.png', output: 'png_basi6a16.png', copy: true)
configure_file(input: 'png/basn0g01.png', output: 'png_basn0g01.png', copy: true)
configure_file(input: 'png/basn0g02.png', output: 'png_basn0g02.png', copy: true)
configure_file(input: 'png/basn0g04.png', output: 'png_basn0g04.png', copy: true)
configure_file(input: 'png/basn0g08.png', output: 'png_basn0g08.png', copy: true)
configure_file(input: 'png/basn0g16.png', output: 'png_basn0g16.png', copy: true)
configure_file(input: 'png/basn2c08.png', output: 'png_basn2c08.png', copy: true)
configure_file(input: 'png/basn2c16.png', output: 'png_basn2c16.png', copy: true)
configure_file(input: 'png/basn3p01.png', output: 'png_basn3p01.png', copy: true)
configure_file(input: 'png/basn3p02.png', output: 'png_basn3p02.png', copy: true)
configure_file(input: 'png/basn3p04.png', output: 'png_basn3p04.png', copy: true)
configure_file(input: 'png/basn3p08.png', output: 'png_basn3p08.png', copy: true)
configure_file(input: 'png/basn4a08.png', output: 'png_basn4a08.png', copy: true)
configure_file(input: 'png/basn4a16.png', output: 'png_basn4a16.png', copy: true)
configure_file(input: 'png/basn6a08.png', output: 'png_basn6a08.png', copy: true)
configure_file(input: 'png/basn6a16.png', output: 'png_basn6a16.png', copy: true)
configure_file(input: 'png/bgai4a08.png', output: 'png_bgai4a08.png', copy: true)
configure_file(input: 'png/bgai4a16.png', output: 'png_bgai4a16.png', copy: true)
configure_file(input: 'png/bgan6a08.png', output: 'png_bgan6a08.png', copy: true)
configure_file(input: 'png/bgan6a16.png', output: 'png_bgan6a16.png', copy: true)
configure_file(input: 'png/bgbn4a08.png', output: 'png_bgbn4a08.png', copy: true)
configure_file(input: 'png/bggn4a16.png', output: 'png_bggn4a16.png', copy: true)
configure_file(input: 'png/bgwn6a08.png', output: 'png_bgwn6a08.png', copy: true)
configure_file(input: 'png/bgyn6a16.png', output: 'png_bgyn6a16.png', copy: true)
configure_file(input: 'png/ccwn2c08.png', output: 'png_ccwn2c08.png', copy: true)
configure_file(input: 'png/ccwn3p08.png', output: 'png_ccwn3p08.png', copy: true)
configure_file(input: 'png/cdfn2c08.png', output: 'png_cdfn2c08.png', copy: true)
configure_file(input: 'png/cdhn2c08.png', output: 'png_cdhn2c08.png', copy: true)
configure_file(input: 'png/cdsn2c08.png', output: 'png_cdsn2c08.png', copy: true)
configure_file(input: 'png/cdun2c08.png', output: 'png_cdun2c08.png', copy: true)
configure_file(input: 'png/ch1n3p04.png', output: 'png_ch1n3p04.png', copy: true)
configure_file(input: 'png/ch2n3p08.png', output: 'png_ch2n3p08.png', copy: true)
configure_file(input: 'png/cm0n0g04.png', output: 'png_cm0n0g04.png', copy: true)
configure_file(input: 'png/cm7n0g04.png', output: 'png_cm7n0g04.png', copy: true)
configure_file(input: 'png/cm9n0g04.png', output: 'png_cm9n0g04.png', copy: true)
configure_file(input: 'png/cs3n2c16.png', output: 'png_cs3n2c16.png', copy: true)
configure_file(input: 'png/cs3n3p08.png', output: 'png_cs3n3p08.png', copy: true)
configure_file(input: 'png/cs5n2c08.png', output: 'png_cs5n2c08.png', copy: true)
configure_file(input: 'png/cs5n3p08.png', output: 'png_cs5n3p08.png', copy: true)
configure_file(input: 'png/cs8n2c08.png', output: 'png_cs8n2c08.png', copy: true)
configure_file(input: 'png/cs8n3p08.png', output: 'png_cs8n3p08.png', copy: true)
configure_file(input: 'png/ct0n0g04.png', output: 'png_ct0n0g04.png', copy: true)
configure_file(input: 'png/ct1n0g04.png', output: 'png_ct1n0g04.png', copy: true)
configure_file(input: 'png/cten0g04.png', output: 'png_cten0g04.png', copy: true)
configure_file(input: 'png/ctfn0g04.png', output: 'png_ctfn0g04.png', copy: true)
configure_file(input: 'png/ctgn0g04.png', output: 'png_ctgn0g04.png', copy: true)
configure_file(input: 'png/cthn0g04.png', output: 'png_cthn0g04.png', copy: true)
configure_file(input: 'png/ctjn0g04.png', output: 'png_ctjn0g04.png', copy: true)
configure_file(input: 'png/ctzn0g04.png', output: 'png_ctzn0g04.png', copy: true)
configure_file(input: 'png/exif2c08.png', output: 'png_exif2c08.png', copy: true)
configure_file(input: 'png/f00n0g08.png', output: 'png_f00n0g08.png', copy: true)
configure_file(input: 'png/f00n2c08.png', output: 'png_f00n2c08.png', copy: true)
configure_file(input: 'png/f01n0g08.png', output: 'png_f01n0g08.png', copy: true)
configure_file(input: 'png/f01n2c08.png', output: 'png_f01n2c08.png', copy: true)
configure_file(input: 'png/f02n0g08.png', output: 'png_f02n0g08.png', copy: true)
configure_file(input: 'png/f02n2c08.png', output: 'png_f02n2c08.png', copy: true)
configure_file(input: 'png/f03n0g08.png', output: 'png_f03n0g08.png', copy: true)
configure_file(input: 'png/f03n2c08.png', output: 'png_f03n2c08.png', copy: true)
configure_file(input: 'png/f04n0g08.png', output: 'png_f04n0g08.png', copy: true)
configure_file(input: 'png/f04n2c08.png', output: 'png_f04n2c08.png', copy: true)
configure_file(input: 'png/f99n0g04.png', output: 'png_f99n0g04.png', copy: true)
configure_file(input: 'png/g03n0g16.png', output: 'png_g03n0g16.png', copy: true)
configure_file(input: 'png/g03n2c08.png', output: 'png_g03n2c08.png', copy: true)
configure_file(input: 'png/g03n3p04.png', output: 'png_g03n3p04.png', copy: true)
configure_file(input: 'png/g04n0g16.png', output: 'png_g04n0g16.png', copy: true)
configure_file(input: 'png/g04n2c08.png', output: 'png_g04n2c08.png', copy: true)
configure_file(input: 'png/g04n3p04.png', output: 'png_g04n3p04.png', copy: true)
configure_file(input: 'png/g05n0g16.png', output: 'png_g05n0g16.png', copy: true)
configure_file(input: 'png/g05n2c08.png', output: 'png_g05n2c08.png', copy: true)
configure_file(input: 'png/g05n3p04.png', output: 'png_g05n3p04.png', copy: true)
configure_file(input: 'png/g07n0g16.png', output: 'png_g07n0g16.png', copy: true)
configure_file(input: 'png/g07n2c08.png', output: 'png_g07n2c08.png', copy: true)
configure_file(input: 'png/g07n3p04.png', output: 'png_g07n3p04.png', copy: true)
configure_file(input: 'png/g10n0g16.png', output: 'png_g10n0g16.png', copy: true)
configure_file(input: 'png/g10n2c08.png', output: 'png_g10n2c08.png', copy: true)
configure_file(input: 'png/g10n3p04.png', output: 'png_g10n3p04.png', copy: true)
configure_file(input: 'png/g25n0g16.png', output: 'png_g25n0g16.png', copy: true)
configure_file(input: 'png/g25n2c08.png', output: 'png_g25n2c08.png', copy: true)
configure_file(input: 'png/g25n3p04.png', output: 'png_g25n3p04.png', copy: true)
configure_file(input: 'png/oi1n0g16.png', output: 'png_oi1n0g16.png', copy: true)
configure_file(input: 'png/oi1n2c16.png', output: 'png_oi1n2c16.png', copy: true)
configure_file(input: 'png/oi2n0g16.png', output: 'png_oi2n0g16.png', copy: true)
configure_file(input: 'png/oi2n2c16.png', output: 'png_oi2n2c16.png', copy: true)
configure_file(input: 'png/oi4n0g16.png', output: 'png_oi4n0g16.png', copy: true)
configure_file(input: 'png/oi4n2c16.png', output: 'png_oi4n2c16.png', copy: true)
configure_file(input: 'png/oi9n0g16.png', output: 'png_oi9n0g16.png', copy: true)
configure_file(input: 'png/oi9n2c16.png', output: 'png_oi9n2c16.png', copy: true)
configure_file(input: 'png/pp0n2c16.png', output: 'png_pp0n2c16.png', copy: true)
configure_file(input: 'png/pp0n6a08.png', output: 'png_pp0n6a08.png', copy: true)
configure_file(input: 'png/ps1n0g08.png', output: 'png_ps1n0g08.png', copy: true)
configure_file(input: 'png/ps1n2c16.png', output: 'png_ps1n2c16.png', copy: true)
configure_file(input: 'png/ps2n0g08.png', output: 'png_ps2n0g08.png', copy: true)
configure_file(input: 'png/ps2n2c16.png', output: 'png_ps2n2c16.png', copy: true)
configure_file(input: 'png/s01i3p01.png', output: 'png_s01i3p01.png', copy: true)
configure_file(input: 'png/s01n3p01.png', output: 'png_s01n3p01.png', copy: true)
configure_file(input: 'png/s02i3p01.png', output: 'png_s02i3p01.png', copy: true)
configure_file(input: 'png/s02n3p01.png', output: 'png_s02n3p01.png', copy: true)
configure_file(input: 'png/s03i3p01.png', output: 'png_s03i3p01.png', copy: true)
configure_file(input: 'png/s03n3p01.png', output: 'png_s03n3p01.png', copy: true)
configure_file(input: 'png/s04i3p01.png', output: 'png_s04i3p01.png', copy: true)
configure_file(input: 'png/s04n3p01.png', output: 'png_s04n3p01.png', copy: true)
configure_file(input: 'png/s05i3p02.png', output: 'png_s05i3p02.png', copy: true)
configure_file(input: 'png/s05n3p02.png', output: 'png_s05n3p02.png', copy: true)
configure_file(input: 'png/s06i3p02.png', output: 'png_s06i3p02.png', copy: true)
configure_file(input: 'png/s06n3p02.png', output: 'png_s06n3p02.png', copy: true)
configure_file(input: 'png/s07i3p02.png', output: 'png_s07i3p02.png', copy: true)
configure_file(input: 'png/s07n3p02.png', output: 'png_s07n3p02.png', copy: true)
configure_file(input: 'png/s08i3p02.png', output: 'png_s08i3p02.png', copy: true)
configure_file(input: 'png/s08n3p02.png', output: 'png_s08n3p02.png', copy: true)
configure_file(input: 'png/s09i3p02.png', output: 'png_s09i3p02.png', copy: true)
configure_file(input: 'png/s09n3p02.png', output: 'png_s09n3p02.png', copy: true)
configure_file(input: 'png/s32i3p04.png', output: 'png_s32i3p04.png', copy: true)
configure_file(input: 'png/s32n3p04.png', output: 'png_s32n3p04.png', copy: true)
configure_file(input: 'png/s33i3p04.png', output: 'png_s33i3p04.png', copy: true)
configure_file(input: 'png/s33n3p04.png', output: 'png_s33n3p04.png', copy: true)
configure_file(input: 'png/s34i3p04.png', output: 'png_s34i3p04.png', copy: true)
configure_file(input: 'png/s34n3p04.png', output: 'png_s34n3p04.png', copy: true)
configure_file(input: 'png/s35i3p04.png', output: 'png_s35i3p04.png', copy: true)
configure_file(input: 'png/s35n3p04.png', output: 'png_s35n3p04.png', copy: true)
configure_file(input: 'png/s36i3p04.png', output: 'png_s36i3p04.png', copy: true)
configure_file(input: 'png/s36n3p04.png', output: 'png_s36n3p04.png', copy: true)
configure_file(input: 'png/s37i3p04.png', output: 'png_s37i3p04.png', copy: true)
configure_file(input: 'png/s37n3p04.png', output: 'png_s37n3p04.png', copy: true)
configure_file(input: 'png/s38i3p04.png', output: 'png_s38i3p04.png', copy: true)
configure_file(input: 'png/s38n3p04.png', output: 'png_s38n3p04.png', copy: true)
configure_file(input: 'png/s39i3p04.png', output: 'png_s39i3p04.png', copy: true)
configure_file(input: 'png/s39n3p04.png', output: 'png_s39n3p04.png', copy: true)
configure_file(input: 'png/s40i3p04.png', output: 'png_s40i3p04.png', copy: true)
configure_file(input: 'png/s40n3p04.png', output: 'png_s40n3p04.png', copy: true)
configure_file(input: 'png/tbbn0g04.png', output: 'png_tbbn0g04.png', copy: true)
configure_file(input: 'png/tbbn2c16.png', output: 'png_tbbn2c16.png', copy: true)
configure_file(input: 'png/tbbn3p08.png', output: 'png_tbbn3p08.png', copy: true)
configure_file(input: 'png/tbgn2c16.png', output: 'png_tbgn2c16.png', copy: true)
configure_file(input: 'png/tbgn3p08.png', output: 'png_tbgn3p08.png', copy: true)
configure_file(input: 'png/tbrn2c08.png', output: 'png_tbrn2c08.png', copy: true)
configure_file(input: 'png/tbwn0g16.png', output: 'png_tbwn0g16.png', copy: true)
configure_file(input: 'png/tbwn3p08.png', output: 'png_tbwn3p08.png', copy: true)
configure_file(input: 'png/tbyn3p08.png', output: 'png_tbyn3p08.png', copy: true)
configure_file(input: 'png/tm3n3p02.png', output: 'png_tm3n3p02.png', copy: true)
configure_file(input: 'png/tp0n0g08.png', output: 'png_tp0n0g08.png', copy: true)
configure_file(input: 'png/tp0n2c08.png', output: 'png_tp0n2c08.png', copy: true)
configure_file(input: 'png/tp0n3p08.png', output: 'png_tp0n3p08.png', copy: true)
configure_file(input: 'png/tp1n3p08.png', output: 'png_tp1n3p08.png', copy: true)
configure_file(input: 'png/xc1n0g08.png', output: 'png_xc1n0g08.png', copy: true)
configure_file(input: 'png/xc9n2c08.png', output: 'png_xc9n2c08.png', copy: true)
configure_file(input: 'png/xcrn0g04.png', output: 'png_xcrn0g04.png', copy: true)
configure_file(input: 'png/xcsn0g01.png', output: 'png_xcsn0g01.png', copy: true)
configure_file(input: 'png/xd0n2c08.png', output: 'png_xd0n2c08.png', copy: true)
configure_file(input: 'png/xd3n2c08.png', output: 'png_xd3n2c08.png', copy: true)
configure_file(input: 'png/xd9n2c08.png', output: 'png_xd9n2c08.png', copy: true)
configure_file(input: 'png/xdtn0g01.png', output: 'png_xdtn0g01.png', copy: true)
configure_file(input: 'png/xhdn0g08.png', output: 'png_xhdn0g08.png', copy: true)
configure_file(input: 'png/xlfn0g04.png', output: 'png_xlfn0g04.png', copy: true)
configure_file(input: 'png/xs1n0g01.png', output: 'png_xs1n0g01.png', copy: true)
configure_file(input: 'png/xs2n0g01.png', output: 'png_xs2n0g01.png', copy: true)
configure_file(input: 'png/xs4n0g01.png', output: 'png_xs4n0g01.png', copy: true)
configure_file(input: 'png/xs7n0g01.png', output: 'png_xs7n0g01.png', copy: true)
configure_file(input: 'png/z00n2c08.png', output: 'png_z00n2c08.png', copy: true)
configure_file(input: 'png/z03n2c08.png', output: 'png_z03n2c08.png', copy: true)
configure_file(input: 'png/z06n2c08.png', output: 'png_z06n2c08.png', copy: true)
configure_file(input: 'png/z09n2c08.png', output: 'png_z09n2c08.png', copy: true)
